force-app/main/default/objects/Product_User__c/Product_User__c.object-meta.xml
<CustomObject>
    <label>Product User</label>
    <nameField>
        <label>Product Users Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>