force-app/main/default/objects/Product_User__c/fields/Debticate_Product__c.field-meta.xml
<CustomField>
    <fullName>Debticate_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debitcate Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Competitor_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Power_Users</relationshipName>
    <type>Lookup</type>
</CustomField>