force-app/main/default/objects/Product_User__c/fields/Power_User__c.field-meta.xml
<CustomField>
    <fullName>Power_User__c</fullName>
    <label>Power User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Power_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>