force-app/main/default/objects/Product_User__c/fields/User_Level__c.field-meta.xml
<CustomField>
    <fullName>User_Level__c</fullName>
    <label>User Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Power User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>